welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:12: error: ';' expected but '(' found.
	avance();
              ^