welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var n = 0
for (n <- 1 to 28) {
	avance();
	avance();
	avance();
	avance();
	gauche();
	avance();
	avance();
	droite():
	avance();
	avance();
	avance();
	avance();
	gauche();
	avance();
	avance();
	droite();
	avance();
	avance();
	avance();
	avance();
	n=n+1;
}
